# project-planner

./: .gitignore  Makefile  README.md  project.yaml.tmpl  pyproject.toml
.github/workflows/: pull-request.yaml
project_planner/: __main__.py  bin_packer.py  parser.py
tests/: test_bin_packer.py
