[tool.poetry]
name = "project-planner"
version = "0.1.0"
description = ""
authors = ["Adam Gignac <gignac.adam+github@gmail.com>"]
readme = "README.md"
packages = [{include = "project_planner"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
typer = "^0.9.0"
pyyaml = "^6.0"
pydantic = "^1.10.8"
rich = "^13.3.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
